--- a/NoDecentDiary/Pages/LogPage.razor
+++ b/NoDecentDiary/Pages/LogPage.razor
@@ -11,7 +11,7 @@
         </MIcon>
     </MButton>
 
-    <MToolbarTitle>查看日志文件</MToolbarTitle>
+    <MToolbarTitle>@(I18n.T("About.LogFile"))</MToolbarTitle>
 
     <MSpacer></MSpacer>
 </MAppBar>
