--- a/NoDecentDiary/Pages/UserPage.razor
+++ b/NoDecentDiary/Pages/UserPage.razor
@@ -42,7 +42,7 @@
             <MListItem OnClick="()=>ShowUserName=true">
                 <MListItemIcon>
                     <MIcon Class="list-item-icon">
-                        mdi-square-edit-outline
+                        mdi-card-account-details-outline
                     </MIcon>
                 </MListItemIcon>
 
@@ -66,7 +66,7 @@
             <MListItem OnClick="()=>ShowSign = true">
                 <MListItemIcon>
                     <MIcon Class="list-item-icon">
-                        mdi-sign-text
+                        mdi-file-sign
                     </MIcon>
                 </MListItemIcon>
 
