--- a/NoDecentDiary/Pages/PrivacyPolicyPage.razor
+++ b/NoDecentDiary/Pages/PrivacyPolicyPage.razor
@@ -1,21 +1,9 @@
 ﻿@page "/privacy-policy"
 @inherits PageComponentBase
 
-<MAppBar App
-         Color="white"
-         Elevation="0">
-    <MButton Icon OnClick="NavigateToBack">
-        <MIcon>
-            mdi-arrow-left
-        </MIcon>
-    </MButton>
-
-    <MAppBarTitle Class="font-weight-bold">
-        @(I18n!.T("About.Privacy"))
-    </MAppBarTitle>
-
-    <MSpacer></MSpacer>
-</MAppBar>
+<MyAppBar Title="@(I18n!.T("About.Privacy"))"
+          OnClick="NavigateToBack">
+</MyAppBar>
 
 <MContainer>
     <MarkdownDisplay Value="@Content" />
