--- a/NoDecentDiary/Pages/TagPage.razor
+++ b/NoDecentDiary/Pages/TagPage.razor
@@ -20,11 +20,7 @@
 </MAppBar>
 
 <ScrollContainer Id="scrolling-tag">
-    <MContainer>
-        <DiaryCardList Value="Diaries">
-
-        </DiaryCardList>
-    </MContainer>
+    <DiaryCardList Value="Diaries" />
 </ScrollContainer>
 
 <FabTransition>
