fix: abnormal scrolling

--- a/NoDecentDiary/Pages/AboutPage.razor
+++ b/NoDecentDiary/Pages/AboutPage.razor
@@ -5,7 +5,7 @@
           OnClick="NavigateToBack">
 </MyAppBar>
 
-<MContainer>
+<ScrollContainer>
     <MCard Class="mb-5 py-sm-3"
            Elevation="4"
            Rounded="@("lg")">
@@ -162,7 +162,7 @@
             </MListItem>
         </MList>
     </MCard>
-</MContainer>
+</ScrollContainer>
 
 <MyDialog @bind-MyValue="ShowSourceCode"
           MaxWidth="420">
