--- a/NoDecentDiary/Pages/UserPage.razor
+++ b/NoDecentDiary/Pages/UserPage.razor
@@ -5,7 +5,7 @@
           OnClick="NavigateToBack">
 </MyAppBar>
 
-<MContainer>
+<ScrollContainer>
     <MCard Elevation="4"
            Rounded="@("lg")">
         <MList>
@@ -80,7 +80,7 @@
             </MListItem>
         </MList>
     </MCard>
-</MContainer>
+</ScrollContainer>
 
 <MyDialog MaxWidth="420"
           @bind-MyValue="ShowAvatar">
