--- a/NoDecentDiary/Pages/RelatedOSPPage.razor
+++ b/NoDecentDiary/Pages/RelatedOSPPage.razor
@@ -5,7 +5,7 @@
           OnClick="NavigateToBack">
 </MyAppBar>
 
-<MContainer>
+<ScrollContainer>
     @foreach (var item in OSPs)
     {
         <MCard Class="mb-5"
@@ -32,4 +32,4 @@
            </MList>
         </MCard>
     }
-</MContainer>
+</ScrollContainer>
