--- a/NoDecentDiary/Pages/UserAgreementPage.razor
+++ b/NoDecentDiary/Pages/UserAgreementPage.razor
@@ -5,6 +5,6 @@
           OnClick="NavigateToBack">
 </MyAppBar>
 
-<MContainer>
+<ScrollContainer>
     <MarkdownDisplay Value="@Content" />
-</MContainer>
+</ScrollContainer>
