style: abstract SponsorDialog from AboutPage

--- a/NoDecentDiary/Pages/AboutPage.razor
+++ b/NoDecentDiary/Pages/AboutPage.razor
@@ -147,7 +147,7 @@
 
             <MDivider Class="mx-3 mx-sm-0"></MDivider>
 
-            <MListItem OnClick="()=>{ShowSponsor=true;Amount=0;}">
+            <MListItem OnClick="()=>ShowSponsor=true">
                 <MListItemIcon>
                     <MIcon Class="list-item-icon">
                         mdi-hand-heart-outline
@@ -194,71 +194,4 @@
     </MCard>
 </MyDialog>
 
-<MyDialog @bind-MyValue="ShowSponsor"
-          MaxWidth="420">
-    <MCard>
-        <MCardTitle Class="font-weight-bold">
-            @(I18n!.T("About.Sponsor"))
-            <MSpacer></MSpacer>
-            <MButton Icon OnClick="()=>ShowSponsor=false">
-                <MIcon>mdi-close</MIcon>
-            </MButton>
-        </MCardTitle>
-        <MCardText Class="pb-0">
-            <MChipGroup @bind-Value="Amount"
-                        Mandatory
-                        Column
-                        ActiveClass="primary--text">
-                @foreach (var item in Amounts)
-                {
-                    <MChip Outlined
-                       Filter
-                       OnClick="()=>ShowCustomAmount=false">
-                        @(I18n.T("Amount.CurrencySymbol") +item)
-                    </MChip>
-                }
-                <MChip Outlined
-                       OnClick="()=>ShowCustomAmount=true">
-                    @(I18n.T("Amount.Custom"))
-                </MChip>
-            </MChipGroup>
-            @if (ShowCustomAmount)
-            {
-                <MTextField TValue="string"
-                        Outlined
-                        Dense
-                        HideDetails="@("auto")"
-                        Placeholder="@(I18n.T("Amount.CustomPlace"))"
-                        Prefix="@(I18n.T("Amount.CurrencySymbol"))">
-                </MTextField>
-            }
-        </MCardText>
-        <MCardActions>
-            <MSpacer></MSpacer>
-            <MButton Text OnClick="()=>ShowSponsor=false">
-                @(I18n!.T("Share.Cancel"))
-            </MButton>
-            <MButton Text
-                     Color="primary"
-                     OnClick="OnSponsor">
-                @(I18n!.T("Share.OK"))
-            </MButton>
-        </MCardActions>
-    </MCard>
-</MyDialog>
-
-<MyDialog @bind-MyValue="ShowThank" MaxWidth="420">
-    <MCard>
-        <MCardTitle Class="font-weight-bold">
-            @(I18n!.T("Amount.Thank"))
-            <MSpacer></MSpacer>
-            <MButton Icon OnClick="()=>ShowThank=false">
-                <MIcon>mdi-close</MIcon>
-            </MButton>
-        </MCardTitle>
-        <MCardText>
-            <div class="mb-1">@(I18n!.T("Amount.ThankContent"))</div>
-            <div>@(I18n!.T("Amount.ThankContent2"))</div>
-        </MCardText>
-    </MCard>
-</MyDialog>
+<SponsorDialog @bind-Value="ShowSponsor" />
