--- a/NoDecentDiary/Pages/ReadPage.razor
+++ b/NoDecentDiary/Pages/ReadPage.razor
@@ -5,7 +5,7 @@
          ElevateOnScroll
          Color="white"
          ScrollTarget="#scrolling-read">
-    <MButton Icon OnClick="OnBack">
+    <MButton Icon OnClick="NavigateToBack">
         <MIcon>
             mdi-arrow-left
         </MIcon>
