--- a/NoDecentDiary/Pages/UserAgreementPage.razor
+++ b/NoDecentDiary/Pages/UserAgreementPage.razor
@@ -6,5 +6,5 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MarkdownDisplay Value="@Content" />
+    <MMarkdownIt Source="@Content"></MMarkdownIt>
 </ScrollContainer>
