style: AboutPage and MinePage Structural standardization

--- a/NoDecentDiary/Components/DialogComponents/SponsorDialog.razor
+++ b/NoDecentDiary/Components/DialogComponents/SponsorDialog.razor
@@ -32,7 +32,8 @@
             </MChipGroup>
             @if (ShowCustomAmount)
             {
-                <MTextField TValue="int"
+                <MTextField Value="55"
+                        TValue="int"
                         Type="number"
                         Outlined
                         Dense
