fix(BottomNavigation): error display

--- a/NoDecentDiary/Pages/MinePage.razor
+++ b/NoDecentDiary/Pages/MinePage.razor
@@ -13,7 +13,7 @@
     </MButton>
 </MAppBar>
 
-<ScrollContainer>
+<ScrollContainer Bottom>
     <div class="d-md-flex flex-md-row justify-space-between">
         <MCard Class="mine-info mb-5 py-sm-3"
                Elevation="4"
