feat: update some styles

--- a/NoDecentDiary/Components/DiaryCard.razor
+++ b/NoDecentDiary/Components/DiaryCard.razor
@@ -73,7 +73,7 @@
     <MListItem ThreeLine>
         <MListItemContent>
             <MListItemTitle>
-                <b>@(string.IsNullOrWhiteSpace(Title) ? Text?.Split("\n")[0] : Title)</b>
+                <b>@Title</b>
             </MListItemTitle>
             <MListItemSubtitle>
                 @Text
