--- a/NoDecentDiary/Pages/ReadPage.razor
+++ b/NoDecentDiary/Pages/ReadPage.razor
@@ -116,9 +116,8 @@
         {
             <MTextField Value="@(Diary.Title)"
                     Class="pb-0 my-sm-4 user-select font-weight-bold"
-                    Solo="IsMobile"
-                    Flat="IsMobile"
-                    Outlined="IsDesktop"
+                    Solo
+                    Flat
                     TValue="string"
                     HideDetails="@("auto")"
                     Dense
@@ -129,9 +128,8 @@
 
         <MTextarea Value="@(Diary.Content)"
                    Class="my-sm-4 user-select"
-                   Solo="IsMobile"
-                   Flat="IsMobile"
-                   Outlined="IsDesktop"
+                   Solo
+                   Flat
                    HideDetails="@("auto")"
                    Readonly
                    AutoGrow
